# ifconfig-rs

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.tests  Makefile  Procfile  Readme.md  Rocket.toml
.ci/: script.sh
.circleci/: config.yml
.github/workflows/: ci.yml  docker-image.yml  docker-prod-image.yml
data/: .gitignore  Dockerfile  Makefile
htdocs/: hello.html
src/: backend.rs  fairings.rs  guards.rs  handlers.rs  lib.rs  main.rs  routes.rs
src/backend/: mod.rs  user_agent.rs
templates/: index.html.hbs
tests/: Dockerfile.tests  Makefile  error_handler.rs  ok_handlers.rs
tests/e2e/: Makefile  package-lock.json  package.json  playwright.config.ts
tests/e2e/tests/: acceptance.spec.ts
