[package]
name = "ifconfig-rs"
version = "0.2.0"
authors = ["Lukas Pustina <lukas@pustina.net>"]

description = "Yet another ifconfig / what's my IP service"
repository = "https://github.com/lukaspustina/ifconfig-rs"
readme = "README.md"
license = "MIT"
keywords = ["ifconfig", "ip", "network", "web service"]
include = [
  "README.md",
  "LICENSE",
  "**/*.rs",
  "Cargo.toml",
]
edition = "2018"

[[bin]]
name = "ifconfig-rs"
path = "src/main.rs"

[dependencies]
clap = "2"
dns-lookup = "2"
error-chain = "0.11"
hyper = "0.12"
lazy_static = "1"
maxminddb = "0.9"
regex = "1"
rocket = { version = "0.5", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0", features = ["handlebars"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
woothee = "0.7"

[dev-dependencies]
pretty_assertions = "0.5"

