[package]
name = "ifconfig-rs"
version = "0.2.0"
authors = ["Lukas Pustina <lukas@pustina.net>"]

description = "Yet another ifconfig / what's my IP service"
repository = "https://github.com/lukaspustina/ifconfig-rs"
readme = "Readme.md"
license = "MIT"
keywords = ["ifconfig", "ip", "network", "webservice"]
include = [
  "Readme.md",
  "LICENSE",
  "**/*.rs",
  "Cargo.toml",
]
edition = "2018"

[[bin]]
name = "ifconfig-rs"
path = "src/main.rs"

[dependencies]
dns-lookup = "2"
lazy_static = "1"
maxminddb = "0.24.0"
regex = "1"
rocket = { version = "0.5", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0", features = ["handlebars"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
uaparser = "0.6.3"

[dev-dependencies]
pretty_assertions = "1.4.0"

